<resources>
    <string name="app_name">TiendaVirtual</string>
    <string name="name">Nombre</string>
    <string name="msg_name">Digite el nombre</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="url_imagen">Url imagen</string>
    <string name="msg_description">Digite la descripcion</string>
    <string name="msg_price">Digite Precio</string>
    <string name="digite_la_url_de_la_imagen">Digite la Url de la imagen</string>
    <string name="agregar">Agregar</string>
    <string name="computador_asus">Computador ASUS</string>
    <string name="_13_000_000_00">$ 13.000.000,00</string>
    <string name="bienvenidos">Bienvenidos!</string>
    <string name="agregar_product">Agregar Producto</string>
    <string name="agregar_categoria">Agregar Categoria</string>
    <string name="categories">Categorias</string>
    <string name="nueva_categoria">Nueva Categoria</string>
    <string name="txt_color">Color</string>
    <string name="text_name">Nombre</string>
    <string name="text_cancel">Cancelar</string>
    <string name="txt_create">Crear</string>
    <string name="por_favor_ingrese_la_url_de_la_imagen">Por favor ingrese la URL de la imagen</string>
    <string name="por_favor_ingrese_el_nombre">por favor ingrese el nombre</string>
    <string name="LOGIN">LOGN\n</string>
    <string name="LOGINn">LOGIN</string>
    <string name="Producto_toolbar">Producto</string>
    <string name="product_toolbiar">Producto</string>
    <string name="toolbar_oproducto">Producto</string>
</resources>